post spacing fix

--- a/assets/sass/root/_pages.scss
+++ b/assets/sass/root/_pages.scss
@@ -196,7 +196,6 @@
       }
       p{
         color:#FFF;
-        letter-spacing:-0.25px;
       }
       .btn-base{
         margin-bottom:2rem;
