--- a/style.css
+++ b/style.css
@@ -11016,7 +11016,6 @@ ul {
 
 #page .section-d article p {
   color: #FFF;
-  letter-spacing: -0.25px;
 }
 
 #page .section-d article .btn-base {
